Changelog
=========

2.0.3 (unreleased)
------------------

- Updated Spanish translation
  [macagua]

- Updated Gettext files
  [macagua]

- Added more keywords and strings classifiers items 
  and updated others items for this package
  [macagua]

2.0.2 (2017-12-12)
------------------

- Do not get cached lesscss if debugmode is checked in portal_less.
  [bsuttor]


2.0.1 (2017-05-17)
------------------

- Always encode CSS string before LESS compilation to avoid errors
  [laulaz]

- Don't display info messages if compilation failed
  [laulaz]


2.0 (2017-03-21)
----------------

- Use python package lesscpy directly instead of calling a script (#8).
  This allows to get rid of Node.js in buildout for server-side compiling.
  [laulaz]

- Add (optional) minification of LESS files.
  Code is based on https://github.com/collective/collective.lesscss/pull/9 but
  uses lessc script directly (instead of cleancss) with compress option.
  [laulaz]

- Improve server-side compilation when there are references between files.
  We need to compile the resources all together because otherwise the compiler
  will fail on unknown variables references between files.
  [laulaz]

- Added Spanish translation
  [macagua]

- Added more improvements about i18n
  [macagua]

- Added Bash script for i18ndude
  [macagua]

1.3 (2014-07-02)
----------------

- Update to nodejs v0.10.29
  [seppeljordan]

- Reworked server-side compilation, should work with an registered
  LESS resource now
  [seppeljordan]


1.2 (2014-03-19)
----------------

- Update to lessjs 1.7.0
  [jaroel]


1.1 (2014-03-11)
----------------
* updated nodejs to version 0.10.26
  [seppeljordan]

* updated version of less.js to 1.6.3
  [jaroel]

1.0b2 (2012-04-14)
-------------------

* Fix pypi distribution [sneridagh]

1.0b1 (2012-04-13)
-------------------

* A portal_less inherited from CSSRegistry [sneridagh]
* Import/Export GS profile [sneridagh]
* A viewlet to include less files [sneridagh]